<resources>
    <string name="app_name">MEETi</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="miti_login">Login/Registration</string>
    <string name="miti_newsfeed">NewsFeed</string>
    <string name="miti_social">Social</string>
    <string name="miti_security">Security</string>
    <string name="miti_privacy">Privacy</string>
    <string name="miti_utility">Utility</string>

    <string name="miti_login_hint">Phone number</string>
    <string name="miti_login_password">Password</string>
    <string name="miti_login_otp">Enter otp</string>

    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_tools">Tools</string>
    <string name="menu_share">Share</string>
    <string name="menu_send">Send</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_privacy_policy">PrivacyPolicyActivity</string>

    <string name="channel_name">MEETiApp</string>
    <string name="channel_description">Defaultnotify</string>
    <string-array name="Gender">
        <item>Cisgender</item>
        <item>Transgender</item>
        <item>Fluid</item>
    </string-array>
    <string-array name="Sex">
        <item>Female</item>
        <item>Male</item>
        <item>Intersex</item>
    </string-array>
</resources>
