<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/miti_login">

    <fragment
        android:id="@+id/miti_login"
        android:name="com.example.miti2.ui.login.LoginFragment"
        android:label="@string/miti_login"
        tools:layout="@layout/fragment_login" />

    <fragment
        android:id="@+id/miti_newsfeed"
        android:name="com.example.miti2.ui.newsfeed.FeedFragment"
        android:label="@string/miti_newsfeed"
        tools:layout="@layout/fragment_feed" />

    <fragment
        android:id="@+id/miti_social"
        android:name="com.example.miti2.ui.social.SocialFragment"
        android:label="@string/miti_social"
        tools:layout="@layout/fragment_social" />

    <fragment
        android:id="@+id/miti_security"
        android:name="com.example.miti2.ui.security.SecurityFragment"
        android:label="@string/miti_security"
        tools:layout="@layout/fragment_security" />

    <fragment
        android:id="@+id/miti_privacy"
        android:name="com.example.miti2.ui.privacy.PrivacyFragment"
        android:label="@string/miti_privacy"
        tools:layout="@layout/fragment_privacy" />

    <fragment
        android:id="@+id/miti_utility"
        android:name="com.example.miti2.ui.utility.UtilFragment"
        android:label="@string/miti_utility"
        tools:layout="@layout/fragment_util" />



</navigation>